# Rathaus

./: .gitignore  CMakeLists.txt
src/: Bot.cpp  Bot.h  main.cpp  sensitive.h  util.h
